--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,4 +7,11 @@
   <ItemGroup>
     <PackageVersion Include="Akka.Hosting" Version="1.5.25" />
   </ItemGroup>
+
+  <ItemGroup Label="Testing">
+    <PackageVersion Include="coverlet.collector" Version="6.0.0"/>
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+    <PackageVersion Include="xunit" Version="2.8.1"/>
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1"/>
+  </ItemGroup>
 </Project>
