have functioning web app

--- a/src/WebFactoryTestkit.App/WebFactoryTestkit.App.csproj
+++ b/src/WebFactoryTestkit.App/WebFactoryTestkit.App.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Akka.Hosting" />
+    <PackageReference Include="Akka.Persistence.Hosting" />
+    <PackageReference Include="Akka.Persistence.Sql.Hosting" />
   </ItemGroup>
 
 </Project>
