--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,16 +2,16 @@
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
-
   <!-- Akka.NET Package Versions -->
   <ItemGroup>
     <PackageVersion Include="Akka.Hosting" Version="1.5.27" />
+    <PackageVersion Include="Akka.Persistence.Hosting" Version="1.5.27" />
+    <PackageVersion Include="Akka.Persistence.Sql.Hosting" Version="1.5.27.1" />
   </ItemGroup>
-
   <ItemGroup Label="Testing">
-    <PackageVersion Include="coverlet.collector" Version="6.0.0"/>
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
-    <PackageVersion Include="xunit" Version="2.8.1"/>
-    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1"/>
+    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageVersion Include="xunit" Version="2.8.1" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.1" />
   </ItemGroup>
 </Project>
