--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,9 @@
     <PackageVersion Include="Akka.Hosting" Version="1.5.27" />
     <PackageVersion Include="Akka.Persistence.Hosting" Version="1.5.27" />
     <PackageVersion Include="Akka.Persistence.Sql.Hosting" Version="1.5.27.1" />
+    <PackageVersion Include="Akka.TestKit.Xunit" Version="1.5.27.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
+    <PackageVersion Include="Microsoft.AspNetCore.TestHost" Version="8.0.8" />
   </ItemGroup>
   <ItemGroup Label="Testing">
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
