finished integration sample

--- a/src/WebFactoryTestKit.Tests/WebFactoryTestKit.Tests.csproj
+++ b/src/WebFactoryTestKit.Tests/WebFactoryTestKit.Tests.csproj
@@ -23,4 +23,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\WebFactoryTestkit.App\WebFactoryTestkit.App.csproj" />
+    </ItemGroup>
+
 </Project>
