--- a/src/WebFactoryTestkit.App/WebFactoryTestkit.App.csproj
+++ b/src/WebFactoryTestkit.App/WebFactoryTestkit.App.csproj
@@ -1,14 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Akka.Hosting" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Akka.Hosting"/>
+        <PackageReference Include="Akka.Persistence.Hosting"/>
+        <PackageReference Include="Akka.Persistence.Sql.Hosting"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="WebFactoryTestKit.Tests"/>
+    </ItemGroup>
 
 </Project>
